# fixsrt

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  fixer.cpp  fixer.h  main.cpp
